--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ZJyFdvt.png (1090x731)</title>
+  <link rel="stylesheet" href="./style.css" type="text/css">
+</head>
+
+<body>
+
+  <main>
+
+    <div class="phones">
+      <img src="./images/phones.png" alt="phones">
+    </div>
+
+    <section id="description">
+      <div class="top-part">
+        <img class="instagram-logo" src="./images/brand.png" alt="instagram-logo">
+        <a id="login" href="#"> Log in </a>
+      </div>
+      <div class="information">
+        <h1> Capture and Share <br> the World's Moments</h1>
+        <article>
+          <p> Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share
+            your
+            life <br> with friends and family.</p>
+          <p> Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram
+            &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way
+            to see the world. <br></p>
+          <p> Oh yeah, did we mention it's free? </p>
+        </article>
+        <a class="app-store" href="#"><img src="./images/badge-iphone.png" alt="app-store"></a>
+        <a class="google-play" href="#"><img src="./images/badge-android.png" alt="google-play"></a>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+    <small>&copy; 2014 Instagram</small>
+  </footer>
+
+</body>
+
 </html>
