--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <section class="second-part">
   <div class="brand">
     <img src="images/brand.png" alt="Instagram-Logo"/>
+    <a id="loginbutton" href="">
   </div>
 <div class="Text">
   <h1 class="title">Capture and Share <br> the World's Moments</h1>
