--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <section>
+      <img class="back" src="images/bgtile.png" alt="smartphone-img"/>
+    </section> 
+
+    <section class="columns">
+      <section>
+        <img src="images/phones.png" alt="smartphone-img"/>
+      </section>
+
+      <section>
+        <div class="logo">
+          <img src="images/brand.png" alt="Instagram-logo"/>
+          <div class="home">
+          <button> <img src="images/home.png" alt="home-logo">Log in</button>
+          </div>
+        </div>
+        
+        <div class = "container">
+          <img src="images/frame.png" alt="frame-image"/>
+
+          <div class="text">
+            <h1 class="title">Capture and Share <br>the World's Moments</h1>
+            <p>Instagram is a <strong>fast</strong>,<strong> beautiful </strong>and <strong> fun</strong> way to share your life with
+            friends and family.</p><br>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p><br>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+        </div> 
+        <div class="download">
+          <img src="images/badge-iphone.png" alt="ios-logo"/>
+          <img src="images/badge-android.png" alt="android-logo"/>
+        </div>
+      </section>
+    </section>
+
+    <nav class="nav-bar">
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">APPI</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class= "copy">&copy; 2014 Instagram</li>
+      </ul>
+  
+    </nav>
   </body>
 </html>
