--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
   </head>
   <body>
     <main class = "main-container">
@@ -20,7 +20,7 @@
         <h1>Capture and Share the World's Moments</h1>
         <p>Instagram is a fast, beautiful and fun way to share your life with
           friends and family.</p>
-          <p>ake a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
             <p>Oh yeah, did we mention it's free?</p>
       </div>
@@ -39,7 +39,7 @@
           <li>Jobs</li>
           <li>Privacy</li>
           <li>Terms</li>
-          <li>&copy; 2014 Instagram</li>
+          <li id="year">&copy; 2014 Instagram</li>
         </ul>
       </footer>
   </body>
