--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="main-section">
+      <img id="phones" src="images/phones.png" alt="Imagen de telefonos">
+      <div class="right-section">
+        <header>
+          <img src="images/brand.png" alt="Logo de Instagram">
+          <button id="login-button" type="submit"><img src="images/home.png" alt="Home logo">Log in</button>
+        </header>
+        <article class="article-text">
+          <h1>Capture and Share <br> the World's Moments </br></h1>
+          <br>
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+          friends and family.</p>
+          <br>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; t's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <br>
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+        <div class="links-apps-stores">
+          <a id="apple-store" href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+          <a id="android-store" href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">Api</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
   </body>
 </html>
