--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </section>
 
 <nav class= "navegation">
-<ul>
+<ul class="navegation_2">
   <li> <a href="#"> About Us </a> </li>
   <li> <a href="#"> Support </a> </li>
   <li> <a href="#"> Blog </a> </li>
