--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 </section>
 
-<nav class= "navegation">
+<nav>
 <ul>
   <li> <a href="#"> About Us </a> </li>
   <li> <a href="#"> Support </a> </li>
