Modified html and css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="container">
+      <div class="container1">
+        <img src="images/phones.png" alt="Big phone">
+      </div>
+      <div class="container2">
+        <header>
+          <img src="images/brand.png" alt="Instagram brand">
+          <button class="login-btn-container">
+            <a href="#" class="login-btn">
+            <img src="images/home.png" alt="home">
+            Log in
+            </a>
+          </button>  
+        </header>
+        <main class="main">
+          <section class="section-info">
+            <h1>Capture and Share <br> the World's Moments</h1>
+            <p>Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.</p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>
+              Oh yeah, did we mention it's free? 
+            </p>
+          </section>
+          <section class="flex-buttons">
+            <a href="#">
+              <img src="images/badge-iphone.png" alt="Apple logo">
+            </a>
+            <a href="#">
+              <img src="images/badge-android.png" alt="Google play logo">
+            </a>
+          </section>
+        </main>
+      </div>
+    </section>
+    <footer class="footer">
+        <ul>
+          <li><a href="#">about us</a></li>
+          <li><a href="#">support</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">press</a></li>
+          <li><a href="#">api</a></li>
+          <li><a href="#">jobs</a></li>
+          <li><a href="#">privacy</a></li>
+          <li><a href="#">terms</a></li>
+        </ul>
+        <p>&copy; 2014 instagram</p>
+    </footer>
   </body>
 </html>
