--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <section class="second-part">
   <div class="brand">
-    <img src="images/brand.png" alt="Instagram-Logo"/>
+    <img class="inst" src="images/brand.png" alt="Instagram-Logo"/>
     <a id="loginbutton" href=""></a>
   </div>
 <div class="Text">
