--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <section class="second-part">
   <div class="brand">
     <img class="inst" src="images/brand.png" alt="Instagram-Logo"/>
-    <a id="loginbutton" href=""></a>
+    <a href= " # "  class= "login">Log in</a>
   </div>
 <div class="Text">
   <h1 class="title">Capture and Share <br> the World's Moments</h1>
