last modified archives

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
           <img src="images/brand.png" alt="Instagram brand">
           <button class="login-btn-container">
             <a href="#" class="login-btn">
-            <img src="images/home.png" alt="home">
-            Log in
-            </a>
+            <img src="images/home.png" alt="home">Log in
+          </a>
           </button>  
         </header>
         <main class="main">
