--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <body>
   <main>
-   <section class="mobiles-section">
-    <div class= "first-part">
-     <img src="images/phones.png" alt="phones"/>
-    </div>
-   </section>
+<section class="mobiles-section">
+  <div class= "first-part"></div>
+   <img src="images/phones.png" alt="phones"/>
+</div>
+</section>
 
 <section class="second-part">
   <div class="brand">
