--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
   <main>
-<section class="mobiles-section">
-  <div class= "first-part"></div>
+<section class="first-part">
+  <div class= "mobiles-section"></div>
    <img src="images/phones.png" alt="phones"/>
 </div>
 </section>
