--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+<body>
+
+  <header class="menu">
+
+    <a href="instagram.com">
+      <img src="images/brand.png" alt="logo_instagram">
+    </a>
+   <button type="submit"><img src="images/home.png" alt="home_boton" /> <a href="https://www.instagram.com/accounts/login/?hl=es"></a>  Log in</button>
+
+  </header>
+
+<div class="container">
+  <img src="images/phones.png" alt="mobile_phone">
+</div>
+
+<div class =square=>
+  <img class="square" src="images/frame.png">
+</div>
+  </div>
+<div class="container_text">
+        <h1> Capture and Share the World's Moments</h1>
+        <p> Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. </p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+        <p>Oh yeah, did we mention it's free? </p>
+
+</div>
+<div class="buttons">
+        <a href="#"><img src="images/badge-iphone.png" alt="iphone_shop"></a>
+        <a href="#"><img src="images/badge-android.png" alt="android_shop"></a>
+</div>
+
+<footer class="footer">
+  <ul>
+    <li><a href="#">About us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">Api</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Term</a></li>
+    <li class="instagram_copy"><a href="#">© 2014 Instagram</a></li>
+  </ul>
+
+</footer>
+
   </body>
 </html>
