--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
 
 <body>
   <main>
-<section class="first-part">
-  <div class= "mobiles-section"></div>
-   <img src="images/phones.png" alt="phones"/>
-</div>
-</section>
+    <div class= "mobiles-section">
+     <section class="first-part">
+       <img src="images/phones.png" alt="phones"/>
+     </section>
 
-<section class="second-part">
-  <div class="brand">
-    <img class="inst" src="images/brand.png" alt="Instagram-Logo"/>
-    <a href= " # "  class= "login">Log in</a>
-  </div>
-<div class="Text">
-  <h1 class="title">Capture and Share <br> the World's Moments</h1>
-  <p>Instagram is a <strong> fast, beautiful</strong> and  <strong>fun</strong> way to share your life with
-  friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram </p>
-</div>
+     <section class="second-part">
+      <div class="brand">
+        <img class="inst" src="images/brand.png" alt="Instagram-Logo"/>
+        <a href= " # "  class= "login">Log in</a>
+      </div>
+      <div class="Text">
+       <h1 class="title">Capture and Share <br> the World's Moments</h1>
+       <p>Instagram is a <strong> fast, beautiful</strong> and  <strong>fun</strong> way to share your life with
+        friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram </p>
+      </div>
 </section>
-
+</div>
 <nav>
 <ul>
   <li> <a href="#"> About Us </a> </li>
