--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <div class= "back-colour"></div>
   <main>
     <div class= "mobiles-section">
      <section class="first-part">
