--- a/index.html
+++ b/index.html
@@ -4,13 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+     <section class="container">
+        <div class="left-column">
+          <img src="images/phones.png" alt="Two phones">
+        </div>
+
+        <div class="right-column">
+          <nav class="info">
+            <img src="images/brand.png" alt="Instagram Logo">
+            <button class="log-in"><img src="images/home.png" alt="Log in button">Log in</button>
+          </nav>
+
+          <div class="background-box">
+              <h1>Capture and Share<br/> the World's Moments</h1>
+              <p class="text">Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+              <p class="text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p class="text">Oh yeah, did we mention it's free?</p>
+            </img>
+            <nav>
+              <button class="button"><img src="images/badge-iphone.png" alt="App Store button"></button>
+              <button class="button"><img src="images/badge-android.png" alt="Google Play button"></button>
+            </nav>
+          </div>
+        </div>
+      </section>
+    
+
+    <footer>
+        <ul class="footer">
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">APT</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a class="copyright" href="#">&copy; 2014 Instagram</a></li>
+        </ul>
+    </footer>
   </body>
 </html>
