--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-  <div class= "back-colour"></div>
+  <header>
+  <div class= "back-colour">
+    <img class="backC" src="images/bgtile.png" alt="backC"/>
+  </div>
+ </header>
   <main>
     <div class= "mobiles-section">
      <section class="first-part">
