--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-  <main>
+  <div class= "back-colour">
     <img class="backC" src="images/bgtile.png" alt="backC"/>
-    <div class= "mobiles-section">   
+  </div>
+  <main>
+    <div class= "mobiles-section">
      <section class="first-part">
        <img src="images/phones.png" alt="phones"/>
      </section>
