--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href= " # "  class= "login">Log in</a>
       </div>
       <div class="Text">
-       <img class="frame" src="images/frame.png" alt="Frame"/>
+       <img class="Frame" src="images/frame.png" alt="Frame"/>
        <h1 class="title">Capture and Share <br> the World's Moments</h1>
        <p>Instagram is a <strong> fast, beautiful</strong> and  <strong>fun</strong> way to share your life with
         friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram </p>
