--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
       </div>
       <div class="Text">
        <img class="Frame" src="images/frame.png" alt="Frame"/>
-       <h1 class="title">Capture and Share <br> the World's Moments</h1>
-       <p>Instagram is a <strong> fast, beautiful</strong> and  <strong>fun</strong> way to share your life with
-        friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram </p>
-        <img class="PS" src="images/badge-android.png" alt="PlayStore"/>
-        <img class="AS" src="images/badge-iphone.png" alt="AppleStore"/>
+       <div class="Text-2">
+        <h1 class="title">Capture and Share <br> the World's Moments</h1>
+        <p>Instagram is a <strong> fast, beautiful</strong> and  <strong>fun</strong> way to share your life with
+         friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram </p>
+         <img class="PS" src="images/badge-android.png" alt="PlayStore"/>
+         <img class="AS" src="images/badge-iphone.png" alt="AppleStore"/>
+      </div>
       </div>
     </section>
     </div>
