--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <section class="second-part">
       <div class="brand">
         <img class="inst" src="images/brand.png" alt="Instagram-Logo"/>
-        <a href= " # "  class= "login">Log in</a>
+        <a href= " # "  class= "login"><b><img class="Home" src="images/home.png" alt="Home"/></b>Log in</a>
       </div>
       <div class="Text">
        <img class="Frame" src="images/frame.png" alt="Frame"/>
