--- a/index.html
+++ b/index.html
@@ -4,13 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+      <link href="styles/style.css" rel="stylesheet">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+<body>
+  <section id="main-page">
+  	<div><img src="images/phones.png" class="phones"></div>
+  <section id="content">
+  	<div class="content-buttons">
+    	<img src="images/brand.png" class="logo"><span class="home-button">
+          <img src="images/home.png" class="home"><a href="#">Log in</a></span>
+        </div>
+    <div class="content-text">
+      <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+    <div class="downloads">
+          <a href="#"><img src="images/badge-iphone.png" class="apple"></a>
+          <a href="#"><img src="images/badge-android.png" class="android"></a>
+        </div>
+    </div>
+    </section>
+    </section>
+    <section id="links-footer">
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </section>  
   </body>
 </html>
