--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <li> <a href="#"> Privacy </a> </li>
   <li> <a href="#"> Terms</a> </li>
   </ul>
+  &copy; 2014 Instagram
 </nav>
   </main>
 </body>
