--- a/index.html
+++ b/index.html
@@ -8,21 +8,64 @@
   </head>
   <body>
     <div id="background-color-element"></div>
+
     <section id="main-section">
+
       <div id="screens-container">
         <img id="phones-image" src="images/phones.png" alt="app-screens">
       </div>
 
 
       <div id="info-container">
-        <div><img id="logo" src="images/brand.png" alt="logo"></div>
-        <div id="card"></div>
+        <div id="container-header">
+          <img id="logo" src="images/brand.png" alt="logo">
+          <button>
+            <img src="images/home.png" alt="home">
+            <div>Log In</div>
+          </button>
+        </div>
+
+        <div id="card">
+          <h2>
+            Capture and Share <br> the World's Moments
+          </h2>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.
+          </p>
+          <p> 
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+
+          <br>
+
+          <div id="download-links-container">
+            <img src="images/badge-iphone.png" alt="iphone-badge-download">
+            <img src="images/badge-android.png" alt="android-badge-download">
+          </div>
+          
+        </div>
       </div>
+
     </section>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+
+    <footer>
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
+
+
   </body>
 </html>
