Tweaking portions of site

--- a/index.html
+++ b/index.html
@@ -23,26 +23,37 @@
             </div>
             <div class="container-right-middle">
               <header>
-                <h1>Captures and Share the World's Moments</h1>
+                <h1>Capture and Share the World's Moments</h1>
               </header>
               <p>
-                Instagram Capture and Share the World's Moments Instagram is a
-                <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share
-                your life with friends and family. Take a picture or video,
-                choose a filter to transform its look and feel, then post to
-                Instagram &mdash; it's that easy. You can even share to
-                Facebook, Twitter, Tumblr and more. It's a new way to see the
-                world. Oh yeah, did we mention it's free?
+                Instagram is a <strong>fast</strong>,
+                <strong>beautiful</strong> and <strong>fun</strong> way to share
+                your life with friends and family.
               </p>
+              <p>
+                Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way
+                to see the world.
+              </p>
+              <p>Oh yeah, did we mention it's free?</p>
             </div>
-            <div class="container-right-bottom"></div>
+            <div class="container-right-bottom">
+              <img
+                src="/images/badge-iphone.png"
+                alt="Download on the App Store"
+              />
+              <img
+                src="/images/badge-android.png"
+                alt="Get it on Google Play"
+              />
+            </div>
           </div>
         </div>
       </section>
-      Download on the App Store Get it on Google Play
     </main>
     <footer>
-      <nav>
+      <nav class="footer-nav">
         <ul>
           <li><a href="/about">About Us</a></li>
           <li><a href="/support">Support</a></li>
@@ -52,7 +63,7 @@
           <li><a href="/jobs">Jobs</a></li>
           <li><a href="/privacy">Privacy</a></li>
           <li><a href="/terms">Terms</a></li>
-          <span>&copy; 2014 Instagram</span>
+          <li><span>&copy; 2014 Instagram</span></li>
         </ul>
       </nav>
     </footer>
