--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+     <link rel="stylesheet" href="styles/style.css" />
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+<img class="two-phones" src="images/phones.png" alt="two-phones"/>
+
+<section>
+<div class="brand-logo">
+  <img src ="images/brand.png" alt="brand-logo"/> 
+<a class="link-button" href="#">
+  <img src="images/home.png"/>
+ <p>Log in</p> 
+</a>
+</div>
+
+  
+<article>
+<h1>Capture and Share<br> the World's Moments</h1>
+  <p>Instagram is a fast, beautiful and fun way to share your life <br>with
+    friends and family. </p>
+  <p>Take a picture or video, choose a filter to transform its look <br>and feel, then post to Instagram
+    &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.</p>
+    <p> Oh yeah, did we mention it's free? </p>
+<div class="app-download-buttons">
+ <img src="images/badge-iphone.png" alt="app-store-button"/>
+ <img src="images/badge-android.png" alt="google-play-button"/>
+</div>
+  </article>
+</section>
+
+
+
+    </header>
+      
+         <nav>
+<ul class="nav-bar-ul">
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li> 
+    <li><a href="#">Blog</a></li>
+       <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li> 
+    <li><a href="#">Jobs</a></li>
+       <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li> 
+    <li class="instagram"> 2014 Instagram</li>
+  </ul>
+</nav>
+
   </body>
+
 </html>
