html final ul links done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <!-- don't forget to link your styles -->
   </head>
   <body>
+    <div>
+    <div>
+      <img src="images/phones.png" alt="phones_pic">
+    </div>  
+    </div>
+    <div>
+      <ul>
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">SUPPORT</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">PRESS</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+        <li><a href="#">© 2014 INSTAGRAM</a></li>
+      </ul>
+    </div>
+   
+   
     Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
