--- a/index.html
+++ b/index.html
@@ -4,13 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <header>
+      <div class="container">
+        <div>
+          <img src="images/brand.png" class="logo" alt="Instagram logo and name">
+        </div>
+
+        <div>
+          <button>
+            <img src="images/home.png" alt="house icon">
+            <p>Log in</p>
+          </button>
+        </div>
+      </div>
+
+¡    </header>
+
+      <main class="container">
+
+        <article class="phones">
+          <div>
+            <img src="images/phones.png" alt="smartphones devices">
+          </div>
+        </article>
+
+        <article class="text-box">
+
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+
+          <button>
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+          </button>
+          <button>
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </button>
+
+        </article>
+
+      </main>
+
+      <footer>
+        <a href="#">ABOUT US</a>
+        <a href="#">SUPPORT</a>
+        <a href="#">BLOG</a>
+        <a href="#">PRESS</a>
+        <a href="#">API</a>
+        <a href="#">JOBS</a>
+        <a href="#">PRIVACY</a>
+        <a href="#">TERMS</a>
+        <span>@ 2014 INSTAGRAM</span>
+      </footer>
+
   </body>
 </html>
