--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="/styles/style.css">
+</head>
+
+<body>
+  <div class="page" id="background">
+    <div class="general-block">
+      <img src="/images/phones.png" alt="phones">
+      <div class="right-block">
+        <div class="title-login">
+          <img src="/images/brand.png" alt="brand">
+          <button><img src="/images/home.png" alt="home-icon">Log in</button>
+        </div>
+        <div class="text-block">
+
+          <h1> Capture and Share the World's Moments </h1>
+
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+
+          <p>Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play </p>
+          <img src="/images/badge-android.png" alt="badge-android">
+          <img src="/images/badge-iphone.png" alt="badge-iphone">
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <nav>
+        <ul>
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+    </footer>
+  </div>
+</body>
+
 </html>
