--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 
     <header>
       <div class="container">
-        <div>
-          <img src="images/brand.png" class="logo" alt="Instagram logo and name">
+
+        <div class="logo-box">
+          <div>
+            <img src="images/brand.png" class="logo" alt="Instagram logo and name">
+          </div>
+  
+          <div>
+            <button>
+              <img src="images/home.png" alt="house icon">
+              <p>Log in</p>
+            </button>
+          </div>
         </div>
 
-        <div>
-          <button>
-            <img src="images/home.png" alt="house icon">
-            <p>Log in</p>
-          </button>
-        </div>
       </div>
 
 ¡    </header>
