--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- If you use this live share multiple people can code in it -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="blue">
+    </section>
+
+    <section class="white">
+      <div class="iphone">
+     <img id="phonePic" src="images/phones.png" alt="Image of an iphone">
+      </div>
+
+     <div class="instagram">
+      <nav>
+      <img src="images/brand.png" alt="Instagram logo">
+      <button><img src="images/home.png" alt="home icon">Log in</button>
+       </nav>
+
+      <div class="text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. </p>
+           <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free? </p>
+            
+           <div class="buttons">
+           <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a> 
+            <a href="#"><img src="images/badge-android.png" alt=" Get it on Google Play "></a>
+           </div>
+      </div>
+    </div>
+    </section>
+
+    <footer>
+  <ul>
+    <a href="#"><li>About Us</li></a>
+    <a href="#"><li>Support</li></a>
+    <a href="#"><li>Blog</li></a>
+    <a href="#"><li>Press</li></a>
+    <a href="#"><li>API</li></a>
+    <a href="#"><li>Jobs</li></a>
+    <a href="#"> <li>Privacy</li></a>
+    <a href="#"><li>Terms</li></a>
+    <li id="copyright">&copy; 2014 Instagram</li>
+  </ul>
+    </footer>
   </body>
 </html>
