--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+
+      <div class="background-blue"></div>
+
+      <div class="main">
+        <div class="left-column">
+          <img src="images/phones.png" alt="Phone screenshots" />
+        </div>
+        <div class="right-column">
+          <div class="logo-website">
+            <img src="images/brand.png" alt="Instagram written in calligraphy" />
+            <button>
+              <img src="images/home.png" alt="Home icon" />
+              <p>Log in</p>
+            </button>
+          </div>
+          <article>
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+              friends and family.</p> 
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              Oh yeah, did we mention it's free?</p>
+            <div>
+              <a href="#"><img src="images/badge-iphone.png" alt="Available on App Store" /></a>
+              <a href="#"><img src="images/badge-android.png" alt="Available on Google Play" /></a>
+            </div>
+          </article>
+        </div>
+      </div> 
+
+    <footer>
+      <ul>
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">SUPPORT</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">PRESS</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+
+    </div>
+
+    <!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram -->
   </body>
 </html>
