--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css"/>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+   
+      <div class="blueBack"> </div>
+      <div class="whiteBack"></div>
+      <div class="title"> 
+        <img src="images\brand.png" alt="image of instagram logo">
+      </div>
+      <div class="loginButton">
+        <img src="images\home.png">
+        <a href="#">Log In</a>
+      </div>
+
+      <div class="phoneImage">
+        <img src="images\phones.png" alt="image of iphone">
+      </div>
+   
+        <div class="text">
+            <h1>Capture and Share the World's Moments </h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+              friends and family.</p> 
+              <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy.</p>
+               <p>You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+              <p>Oh yeah, did we mention it's free?</p>
+          </div>
+        <div class="downloadButtons">
+          <a href="#"> <img src="images\badge-iphone.png" alt="download it for Iphone"></a>
+          <a href="#"> <img src="images\badge-iphone.png" alt="download it for Android"></a>
+          </div>
+  
+      <footer>
+        <ul>
+          <li><a href="#">ABOUT US</a></li>
+          <li><a href="#">SUPPORT</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">PRESS</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">JOBS</a></li>
+          <li><a href="#">PRIVACY</a></li>
+          <li><a href="#">TERMS</a></li>
+          <li>&copy; 2014 INSTAGRAM</li>
+        </ul>
+      </footer>
+      
+       
   </body>
 </html>
