--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <div class="main-box">
+    <img class="phones" alt="picture of phones" src="images/phones.png">
+    <div class="right-box">
+    <nav>
+      <img src="images/brand.png">
+      <div class="login">
+        <img class="home" src="/images/home.png" alt="home icon">
+        <h2>Log in</h2>
+      </div>
+    </nav>
+
+    <div class="frame">
+      <h2>Instagram Capture and Share the World's Moments </h2>
+      <h3>Instagram is a fast, beautiful and fun way to share your life with
+        friends and family.</h3>
+      <h3> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+        world.</h3>
+      <h3>Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play </h3>
+      <div class="download">
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <img src="images/badge-android.png" alt="Get it on Google Play">
+
+      </div>
+    </div>
+
+
+
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#"> Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>2014 Instagram</li>
+    </ul>
+
+    <!-- &copy;  -->
+  </footer>
+</body>
+
 </html>
