--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head id=>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header id="background">
+    <div class="main-page">
+      <div class="iphone">
+        <img src="images/phones.png" alt="iphone">
+      </div>
+
+      <div class="column">
+        <div class="brand-logo">
+            <img src ="images/brand.png" alt="brand-logo"/> 
+            <a class="link-button" href="#">
+              <img src="images/home.png"/>
+              <p>Log in</p> 
+            </a>
+        </div>
+
+      <div class="text">
+        <h3>Capture and Share the World's Moments</h3>
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun </strong>way to share your life with
+          friends and family.<br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br><br>Oh yeah, did we mention it's free?</p>
+      </div>
+    
+      <div class="store-logos">
+        <img src="images/badge-iphone.png" alt="App Store">
+        <img src="images/badge-android.png" alt="Google Play Store">
+      </div>
+    </header>
+    </div> 
   </body>
+  </div>
+  <nav>
+    <ul class="nav-bar-ul">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li> 
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li> 
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li> 
+      <li class="link-instagram"> 2014 Instagram</li>
+    </ul>
+  </nav>
+
 </html>
