--- a/index.html
+++ b/index.html
@@ -5,12 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div>
+        <img src="/images/phones.png" alt="Smartphones">
+      </div>
+      <div class="right-block">
+        <header>
+          <img src="/images/brand.png" alt="Instagram Logo">
+          <button><img src="/images/home.png" alt="Home Icon"> Log in</button>
+        </header>
+        <article>
+          <h1>Capture and Share the 
+          <br>  World's Moments</h1>
+          <p>Instagram  Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.<br>
+            <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+            <br> Oh yeah, did we mention it's free?</p>
+          <p class="badges">
+            <a href="#"><img src="/images/badge-iphone.png" alt="Download on the App Store"></a>
+            <a href="#"><img src="/images/badge-android.png" alt="Get it on Google Play"></a>
+          </p>
+        </article>
+      </div>
+    </main>
+    <footer>
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <p>&copy; 2014 Instagram</p>
+      
+    </footer>
   </body>
 </html>
