fixed minor bug

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-       <!-- *Nota: main = Etiqueta principal del body. --> -->
+       <!-- *Nota: main = Etiqueta principal del body. --> 
 
     <main>
       
