Instagram Css Practice Done - Víctor Izquierdo

--- a/index.html
+++ b/index.html
@@ -3,14 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.css">
+
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="main-section">
+      <div class="blue">
+      </div>
+      <div class="white">
+      </div>
+      <div class="content">
+        <div class="phones">
+          <img src="./images/phones.png" alt="" srcset="">
+        </div>
+        <div class="callToAction">
+          <article class="intro">
+            <img src="./images/brand.png" alt="Instagram">;
+            <button type="button" class="button">
+              <img src="./images/home.png" alt="">
+              <p>Log in</p>
+            </button>
+          </article>
+          <article class="description">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+              
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>
+            Oh yeah, did we mention it's free?
+            </p>
+            <div class="interacciones">
+              <button type="button"><img src="images/badge-iphone.png"></button>
+              <button type="button"><img src="./images/badge-android.png"></button>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <nav class="footer">
+        <a href="http://" target="_blank" rel="noopener noreferrer">About Us</a>
+        <a href="http://" target="_blank" rel="noopener noreferrer">Support</a>
+        <a href="http://" target="_blank" rel="noopener noreferrer">Blog</a>
+        <a href="http://" target="_blank" rel="noopener noreferrer">Press</a>
+        <a href="http://" target="_blank" rel="noopener noreferrer">API</a>
+        <a href="http://" target="_blank" rel="noopener noreferrer">Jobs</a>
+        <a href="http://" target="_blank" rel="noopener noreferrer">Privacy</a>
+        <a href="http://" target="_blank" rel="noopener noreferrer">Terms</a>
+        <p>&copy; 2014 Instagram</p>
+      </nav>
+    </footer>
   </body>
 </html>
