--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class=background>
+      <div class=structure>
+        <div class=phones>
+          <img src="../images/phones.png" alt="phones">
+        </div>
+        <div class=text> 
+          <div class=logo-login>
+            <div class=logo><img src=images/brand.png alt=instagram-logo>
+            </div>
+            <div class=login>
+              <button><img src=images/home.png alt=logo-home><p>Log in</p></button>
+            </div>
+          </div> 
+          <div class=text-info>
+                <h1>Capture and Share the World's Moments</h1> 
+                <p>
+                Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br> 
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+                Oh yeah, did we mention it's free? 
+              </p>
+          </div>
+          <div class=download-logos>
+            <img src="images/badge-iphone.png" alt=App-Store>
+            <img src="images/badge-android.png" alt=Google-Play> 
+          </div>
+        </div>
+      </div> 
+    
+      <div class=nav>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><div id=instagram>&copy; 2014 Instagram</div></li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
