--- a/index.html
+++ b/index.html
@@ -1,68 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <link rel="stylesheet" href="../styles/style.css">
-  </head>
-  <body>    
-    <div class="divider">
-      <div class="main">
-        <div class="instagramApp">
-          <img src="../images/phones.png" alt="phones_pic">
-        </div>
-        <div class="sectionBox">
-          <div class="navBar">
-            <div class="instagramLogo">
-              <img id="brand-logo"src="../images/brand.png" alt="instagram_logo">
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Instagram Clone</title>
+      <link rel="stylesheet" href="../styles/style.css">
+   </head>
+   <body>
+      <div class="divider">
+         <div class="main">
+            <img src="../images/phones.png" alt="phones_pic">
+            <div class="sectionBox">
+               <div class="navBar">
+                  <div>
+                     <img src="../images/brand.png" alt="instagram_logo">
+                  </div>
+                  <div class="Log_in">
+                     <p><img src="../images/home.png" alt="home_logo">Log In</p>
+                  </div>
+               </div>
+               <div class="intro">
+                  <h1>Capture and Share <br>the World's Moments</h1>
+                  <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+                     friends and family. <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                     <br>Oh yeah, did we mention it's free?
+                  </p>
+               </div>
+               <div class="appStores">
+                  <div>
+                     <img src="../images/badge-iphone.png" alt="badge-iphone">
+                  </div>
+                  <div>
+                     <img src="../images/badge-android.png" alt="badge-iphone">
+                  </div>
+               </div>
             </div>
-            <div class="home">
-              <div class="LogIn">
-                <div class="login_icon">
-                  <img src="../images/home.png" alt="home_logo">
-                </div>
-                <div class="LogIn_message">
-                  <p>Log In</p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-      <div class="intro">
-        <h1>Capture and Share the World's Moments</h1>
-        <p>nstagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with
-          friends and family. <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-          <br>Oh yeah, did we mention it's free?</p>
+         </div>
+         <div id="footer">
+            <footer>
+               <div>
+                  <ul>
+                     <li><a href="#">ABOUT US</a></li>
+                     <li><a href="#">SUPPORT</a></li>
+                     <li><a href="#">BLOG</a></li>
+                     <li><a href="#">PRESS</a></li>
+                     <li><a href="#">API</a></li>
+                     <li><a href="#">JOBS</a></li>
+                     <li><a href="#">PRIVACY</a></li>
+                     <li><a href="#">TERMS</a></li>
+                     <li>© 2014 INSTAGRAM</li>
+                  </ul>
+               </div>
+            </footer>
+         </div>
       </div>
-      <div class="appStores">
-        <div class="iphone">
-          <img src="../images/badge-iphone.png" alt="badge-iphone">
-        </div>
-        <div class="android">
-          <img src="../images/badge-android.png" alt="badge-iphone">
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="footer">
-    <footer>
-      <div>
-        <ul>
-          <li><a href="#">ABOUT US</a></li>
-          <li><a href="#">SUPPORT</a></li>
-          <li><a href="#">BLOG</a></li>
-          <li><a href="#">PRESS</a></li>
-          <li><a href="#">API</a></li>
-          <li><a href="#">JOBS</a></li>
-          <li><a href="#">PRIVACY</a></li>
-          <li><a href="#">TERMS</a></li>
-          <li>© 2014 INSTAGRAM</li>
-        </ul>
-      </div>
-    </footer>
-  </div>
-</div>
-</body>
+   </body>
 </html>
