Fix href images

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Instagram Clone</title>
-      <link rel="stylesheet" href="../styles/style.css">
+      <link rel="stylesheet" href="styles/style.css">
    </head>
    <body>
       <div class="divider">
          <div class="main">
-            <img src="../images/phones.png" alt="phones_pic">
+            <img src="images/phones.png" alt="phones_pic">
             <div class="sectionBox">
                <div class="navBar">
                   <div>
-                     <img src="../images/brand.png" alt="instagram_logo">
+                     <img src="images/brand.png" alt="instagram_logo">
                   </div>
                   <div class="Log_in">
-                     <p><img src="../images/home.png" alt="home_logo">Log In</p>
+                     <p><img src="images/home.png" alt="home_logo">Log In</p>
                   </div>
                </div>
                <div class="intro">
@@ -29,10 +29,10 @@
                </div>
                <div class="appStores">
                   <div>
-                     <img src="../images/badge-iphone.png" alt="badge-iphone">
+                     <img src="images/badge-iphone.png" alt="badge-iphone">
                   </div>
                   <div>
-                     <img src="../images/badge-android.png" alt="badge-iphone">
+                     <img src="images/badge-android.png" alt="badge-iphone">
                   </div>
                </div>
             </div>
