few changes left

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
   </head>
   
   <body>
-   <div class="blue">
-   </div>  
-
    <div class="content">
      <div class="iPhone-image">
       <img src="/images/phones.png" alt="phone images">
@@ -25,17 +22,17 @@
         <img src="/images/brand.png" alt="logo image">
         <button>
           <img src="/images/home.png" alt="home icon">
-          Log in
+          <p>Log in</p>
         </button>
       </div>
            
       <div class="info">
         <div class="bottom-info">
           <h1>
-            Capture and Share the World's Moments
+            Capture and Share<br> the World's Moments
           </h1>
           <p>
-            Instagram   Instagram is a fast, beautiful and fun way to share your life with
+            Instagram   Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
             friends and family
           </p>
           <p>
@@ -66,7 +63,7 @@
        <li>Jobs</li>
        <li>Privacy</li>
        <li>Terms</li>
-       <li>&copy; 2014 Instagram</li>
+       <p>&copy; 2014 Instagram</p>
      </ul> 
    </footer>
     
