--- a/index.html
+++ b/index.html
@@ -20,15 +20,12 @@
         <div class="content-header">
           <img src="images/brand.png" />
 
-          <button>
-            <img src="images/home.png" id="home-button" />
-            Log In
-          </button>
+          <button>Log In</button>
         </div>
         <div class="content-text">
           <h1>Capture and Share the World's Moments</h1>
           <p>
-            Instagram is a fast, beautiful and fun way to share your life with
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
             friends and family.
           </p>
           <p>
