Upload exercise lab-css-instagram-clone

--- a/index.html
+++ b/index.html
@@ -4,13 +4,65 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <article class="home">
+      <div class="phone">
+        <img src="./images/phones.png" alt="phones-logo" />
+      </div>
+      <div class="right">
+        <div class="logoButton">
+          <img src="./images/brand.png" alt="instagram-logo" />
+          <button class="button">
+            <img src="./images/home.png" alt="home-logo" />
+            Log in
+          </button>
+        </div>
+        <div class="content">
+          <h1>Capture and Share the World's Moments</h1>
+          <h2>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+            share your life with friends and family.
+          </h2>
+          <h3>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </h3>
+          <h4>Oh yeah, did we mention it's free?</h4>
+        </div>
+        <div class="badges">
+          <img src="./images/badge-iphone.png" alt="badge-iphone-logo" />
+          <img src="./images/badge-android.png" alt="badge-android-logo" />
+        </div>
+      </div>
+    </article>
+    <footer>
+      <ul class="footer">
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">SUPPORT</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">PRESS</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+        <li class="instagram">© 2014 INSTAGRAM</li>
+      </ul>
+    </footer>
   </body>
 </html>
+
+<!-- Instagram Capture and Share the World's Moments Instagram is a fast,
+beautiful and fun way to share your life with friends and family. Take a
+picture or video, choose a filter to transform its look and feel, then post
+to Instagram &mdash; it's that easy. You can even share to Facebook,
+Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we
+mention it's free? Download on the App Store Get it on Google Play About Us
+Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram -->
